[package]
name = "mayerror"
version = "0.1.0"
edition = "2021"

[dependencies]
backtrace = { version = "0.3.73", optional = true }
mayerror-derive = { version = "=0.1.0", path = "derive" }
once_cell = "1.19.0"
owo-colors = "4.0.0"

[dev-dependencies]
thiserror = "1.0.62"

[[example]]
name = "error"
required-features = ["backtrace"]

[features]
default = ["backtrace"]
backtrace = ["dep:backtrace", "mayerror-derive/backtrace"]

[workspace]
members = ["derive"]
