[package]
name = "mayerror"
version = "0.1.0"
authors = ["may <m4rch3n1ng@gmail.com>"]
edition = "2021"
description = "pretty errors with known codes"
readme = "readme.md"
repository = "https://github.com/m4rch3n1ng/mayerror"
license = "MPL-2.0"

[dependencies]
backtrace = { version = "0.3.71", optional = true }
mayerror-derive = { version = "=0.1.0", path = "derive" }
once_cell = "1.19.0"
owo-colors = "4.0.0"

[dev-dependencies]
thiserror = "1.0.62"

[[example]]
name = "error"
required-features = ["backtrace"]

[[example]]
name = "composition"
required-features = ["backtrace"]

[[example]]
name = "usage"
required-features = ["backtrace"]

[features]
default = ["backtrace"]
backtrace = ["dep:backtrace", "mayerror-derive/backtrace"]

[workspace]
members = ["derive"]
