[package]
name = "mayerror-derive"
version = "0.1.0"
edition = "2021"
description = "proc macro for mayerror"
repository = "https://github.com/m4rch3n1ng/mayerror"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.71"

[features]
default = []
backtrace = []
